sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: not found: value label
    label etiquette
    ^AlgBubbleSort2:13: error: not found: value goto
        goto etiquette
        ^